--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "otpauth": "^7.0.6",
     "qrcodejs": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-qr-code": "^2.0.2",
     "react-scripts": "4.0.3",
     "totp-generator": "0.0.9",
     "web-vitals": "^1.1.2"
