--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "nodemon": "^2.0.13",
         "qrcodejs": "^1.0.0",
-        "totp-generator": "0.0.9"
+        "totp-generator": "0.0.9",
+        "uuid": "^8.3.2"
     }
 }
