--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "nodemon": "^2.0.13",
+        "otpauth": "^7.0.6",
         "qrcodejs": "^1.0.0",
         "totp-generator": "0.0.9",
         "uuid": "^8.3.2"
