--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "otpauth": "^7.0.6",
+    "qr-scanner": "^1.3.0",
     "qrcodejs": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-qr-code": "^2.0.2",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.2",
     "totp-generator": "0.0.9",
     "web-vitals": "^1.1.2"
   },
