--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
         "base32": "0.0.6",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "hi-base32": "^0.5.1",
         "nodemon": "^2.0.13",
         "otpauth": "^7.0.6",
         "qrcodejs": "^1.0.0",
